# barish

./: .gitignore  Cargo.toml  README.md  flake.nix  makefile  shell.nix
src/: locations.rs  main.rs  rss.rs  utils.rs
